# PyQWebWindow

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml
docs/: context_menu.md  core_components.md  index.html  loading_content.md  python_bindings_and_workers.md  window_management.md
docs/.index/: newest_1  search-index_0.json  static_1
docs/static/: 1. Getting Started.md  2. Core Components.md  3. Loading Content.md  4. Python Bindings and Workers.md  5. JavaScript Interaction.md  6. Window Management.md  7. Window Event Handling.md  8. Inter Process Communication.md  9. Context Menu.md  README.md  development.md  event_handling.md  getting_started.md  ipc.md  javascript_interaction.md
docs/user/: backup.json  build.config.js
examples/: QWebWindow.py  contextmenu.py  ipc.py  qipc.py  themes.py  webview.py  window.py
examples/pages/: helloworld.html  open_link.html  python_binding.html  python_worker.html
src/PyQWebWindow/: QAppManager.py  QWebWindow.py  __init__.py
tests/: QWebWindow.py
tests/pages/: load_assets.html
