[project]
name = "PyQWebWindow"
version = "0.0.1"
authors = [
  { name="BHznJNs", email="441768875@qq.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/BHznJNs/PyQWebWindow"
Issues = "https://github.com/BHznJNs/PyQWebWindow/issues"
